# skyscout

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  launch_system.sh  pyproject.toml  requirements-dev.txt  test_system.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  EXAMPLES.md  GETTING_STARTED.md  HARDWARE_SETUP.md  TESTING_GUIDE.md
ros_ws/: test_packages.sh
ros_ws/src/command_interface/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/command_interface/command_interface/: node.py
ros_ws/src/llm_agent/: README.md  package.xml  setup.py
ros_ws/src/llm_agent/llm_agent/: llm_client.py  mission_templates.py  node.py  weather_client.py
ros_ws/src/llm_agent/test/: test_llm_integration.py
ros_ws/src/mission_planner/: README.md  package.xml  setup.py
ros_ws/src/mission_planner/mission_planner/: node.py
ros_ws/src/navigation_bridge/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/perception/: README.md  package.xml  setup.py
ros_ws/src/skyscout_bringup/: CMakeLists.txt  package.xml
ros_ws/src/skyscout_bringup/launch/: skyscout.launch.py
tests/: test_mission_templates.py  test_mock_drone.py
web_frontend/: README.md  eslint.config.mjs  knip.json  package-lock.json  package.json  pnpm-lock.yaml
web_frontend/src/app/: globals.css  layout.tsx  page.tsx
web_frontend/src/components/: CommandHistory.tsx  CommandInput.tsx  ConnectionModeSelector.tsx  ConnectionStatus.tsx  DroneMap.tsx  MissionStatus.tsx  MockControlPanel.tsx  SkyScoutDashboard.tsx  TelemetryDisplay.tsx  theme-toggle.tsx
web_frontend/src/contexts/: ROSContext.tsx
web_frontend/src/types/: roslib.d.ts
(+10 files in other folders)
