<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skyscout_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for SkyScout system</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>command_interface</exec_depend>
  <exec_depend>llm_agent</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>mission_planner</exec_depend>
  <exec_depend>navigation_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
